feat(alfred): zoom tool

--- a/alfredConfig/Alfred.alfredpreferences/workflows/user.workflow.8949B589-E9B0-4823-B0E5-28704F14742C/info.plist
+++ b/alfredConfig/Alfred.alfredpreferences/workflows/user.workflow.8949B589-E9B0-4823-B0E5-28704F14742C/info.plist
@@ -15,6 +15,8 @@
 				<integer>0</integer>
 				<key>modifiersubtext</key>
 				<string></string>
+				<key>vitoclose</key>
+				<false/>
 			</dict>
 		</array>
 		<key>ABD9DFE8-DA6B-4F46-AD34-4F6926FE883C</key>
@@ -26,6 +28,8 @@
 				<integer>1048576</integer>
 				<key>modifiersubtext</key>
 				<string>⌘ &gt; Only copy the link to Clipboard!</string>
+				<key>vitoclose</key>
+				<false/>
 			</dict>
 			<dict>
 				<key>destinationuid</key>
@@ -34,6 +38,8 @@
 				<integer>0</integer>
 				<key>modifiersubtext</key>
 				<string></string>
+				<key>vitoclose</key>
+				<false/>
 			</dict>
 			<dict>
 				<key>destinationuid</key>
@@ -42,6 +48,8 @@
 				<integer>1048576</integer>
 				<key>modifiersubtext</key>
 				<string>⌘ &gt; Only copy the link to Clipboard!</string>
+				<key>vitoclose</key>
+				<false/>
 			</dict>
 			<dict>
 				<key>destinationuid</key>
@@ -50,6 +58,8 @@
 				<integer>0</integer>
 				<key>modifiersubtext</key>
 				<string></string>
+				<key>vitoclose</key>
+				<false/>
 			</dict>
 			<dict>
 				<key>destinationuid</key>
@@ -58,6 +68,8 @@
 				<integer>0</integer>
 				<key>modifiersubtext</key>
 				<string></string>
+				<key>vitoclose</key>
+				<false/>
 			</dict>
 		</array>
 	</dict>
@@ -78,11 +90,7 @@
 				<false/>
 				<key>onlyshowifquerypopulated</key>
 				<false/>
-				<key>output</key>
-				<integer>0</integer>
 				<key>removeextension</key>
-				<false/>
-				<key>sticky</key>
 				<false/>
 				<key>text</key>
 				<string>{query}</string>
@@ -94,13 +102,15 @@
 			<key>uid</key>
 			<string>2B3CC67B-A963-4638-BFCA-A3FE12BA5587</string>
 			<key>version</key>
-			<integer>0</integer>
+			<integer>1</integer>
 		</dict>
 		<dict>
 			<key>config</key>
 			<dict>
-				<key>plusspaces</key>
-				<false/>
+				<key>browser</key>
+				<string></string>
+				<key>spaces</key>
+				<string></string>
 				<key>url</key>
 				<string>{query}</string>
 				<key>utf8</key>
@@ -111,7 +121,7 @@
 			<key>uid</key>
 			<string>64842A1D-75E7-4103-BD08-4DCB0AA137AE</string>
 			<key>version</key>
-			<integer>0</integer>
+			<integer>1</integer>
 		</dict>
 		<dict>
 			<key>config</key>
@@ -120,13 +130,17 @@
 				<false/>
 				<key>clipboardtext</key>
 				<string>{query}</string>
+				<key>ignoredynamicplaceholders</key>
+				<false/>
+				<key>transient</key>
+				<false/>
 			</dict>
 			<key>type</key>
 			<string>alfred.workflow.output.clipboard</string>
 			<key>uid</key>
 			<string>741DB4F2-5EC9-478D-8CBB-463E10EFC171</string>
 			<key>version</key>
-			<integer>0</integer>
+			<integer>3</integer>
 		</dict>
 		<dict>
 			<key>config</key>
@@ -135,9 +149,19 @@
 				<integer>0</integer>
 				<key>argument</key>
 				<integer>1</integer>
+				<key>focusedappvariable</key>
+				<false/>
+				<key>focusedappvariablename</key>
+				<string></string>
+				<key>hotkey</key>
+				<integer>0</integer>
+				<key>hotmod</key>
+				<integer>0</integer>
 				<key>leftcursor</key>
 				<false/>
 				<key>modsmode</key>
+				<integer>0</integer>
+				<key>relatedAppsMode</key>
 				<integer>0</integer>
 			</dict>
 			<key>type</key>
@@ -145,17 +169,33 @@
 			<key>uid</key>
 			<string>5781539F-3A42-4724-BE8A-AF9E749F1FDE</string>
 			<key>version</key>
-			<integer>0</integer>
+			<integer>2</integer>
 		</dict>
 		<dict>
 			<key>config</key>
 			<dict>
+				<key>alfredfiltersresults</key>
+				<false/>
+				<key>alfredfiltersresultsmatchmode</key>
+				<integer>0</integer>
+				<key>argumenttreatemptyqueryasnil</key>
+				<false/>
+				<key>argumenttrimmode</key>
+				<integer>0</integer>
 				<key>argumenttype</key>
 				<integer>0</integer>
 				<key>escaping</key>
 				<integer>63</integer>
 				<key>keyword</key>
 				<string>wf</string>
+				<key>queuedelaycustom</key>
+				<integer>1</integer>
+				<key>queuedelayimmediatelyinitially</key>
+				<false/>
+				<key>queuedelaymode</key>
+				<integer>0</integer>
+				<key>queuemode</key>
+				<integer>1</integer>
 				<key>runningsubtext</key>
 				<string>Wait, searching … … on AlfredWorkflow.com API</string>
 				<key>script</key>
@@ -238,6 +278,10 @@ if ( count( $results ) == 0 ):
 endif;
 
 echo $wf-&gt;toxml();</string>
+				<key>scriptargtype</key>
+				<integer>0</integer>
+				<key>scriptfile</key>
+				<string></string>
 				<key>subtext</key>
 				<string>The result is from AlfredWorkflow.com API</string>
 				<key>title</key>
@@ -252,7 +296,7 @@ echo $wf-&gt;toxml();</string>
 			<key>uid</key>
 			<string>ABD9DFE8-DA6B-4F46-AD34-4F6926FE883C</string>
 			<key>version</key>
-			<integer>0</integer>
+			<integer>3</integer>
 		</dict>
 		<dict>
 			<key>config</key>
@@ -261,11 +305,7 @@ echo $wf-&gt;toxml();</string>
 				<false/>
 				<key>onlyshowifquerypopulated</key>
 				<false/>
-				<key>output</key>
-				<integer>0</integer>
 				<key>removeextension</key>
-				<false/>
-				<key>sticky</key>
 				<false/>
 				<key>text</key>
 				<string>Also backup download avaliable on AlfredWorkflow.com</string>
@@ -277,7 +317,7 @@ echo $wf-&gt;toxml();</string>
 			<key>uid</key>
 			<string>A97E7797-7E7A-43C6-BFCE-863F4C2B3B4A</string>
 			<key>version</key>
-			<integer>0</integer>
+			<integer>1</integer>
 		</dict>
 		<dict>
 			<key>config</key>
@@ -286,13 +326,17 @@ echo $wf-&gt;toxml();</string>
 				<false/>
 				<key>clipboardtext</key>
 				<string>{query}</string>
+				<key>ignoredynamicplaceholders</key>
+				<false/>
+				<key>transient</key>
+				<false/>
 			</dict>
 			<key>type</key>
 			<string>alfred.workflow.output.clipboard</string>
 			<key>uid</key>
 			<string>5C0825B6-635B-478A-839C-3457CD7772BE</string>
 			<key>version</key>
-			<integer>0</integer>
+			<integer>3</integer>
 		</dict>
 	</array>
 	<key>readme</key>
@@ -309,36 +353,50 @@ echo $wf-&gt;toxml();</string>
 	<dict>
 		<key>2B3CC67B-A963-4638-BFCA-A3FE12BA5587</key>
 		<dict>
+			<key>xpos</key>
+			<integer>700</integer>
 			<key>ypos</key>
 			<real>10</real>
 		</dict>
 		<key>5781539F-3A42-4724-BE8A-AF9E749F1FDE</key>
 		<dict>
+			<key>xpos</key>
+			<integer>100</integer>
 			<key>ypos</key>
 			<real>200</real>
 		</dict>
 		<key>5C0825B6-635B-478A-839C-3457CD7772BE</key>
 		<dict>
+			<key>xpos</key>
+			<integer>700</integer>
 			<key>ypos</key>
 			<real>380</real>
 		</dict>
 		<key>64842A1D-75E7-4103-BD08-4DCB0AA137AE</key>
 		<dict>
+			<key>xpos</key>
+			<integer>420</integer>
 			<key>ypos</key>
-			<real>10</real>
+			<integer>10</integer>
 		</dict>
 		<key>741DB4F2-5EC9-478D-8CBB-463E10EFC171</key>
 		<dict>
+			<key>xpos</key>
+			<integer>700</integer>
 			<key>ypos</key>
 			<real>140</real>
 		</dict>
 		<key>A97E7797-7E7A-43C6-BFCE-863F4C2B3B4A</key>
 		<dict>
+			<key>xpos</key>
+			<integer>700</integer>
 			<key>ypos</key>
 			<real>260</real>
 		</dict>
 		<key>ABD9DFE8-DA6B-4F46-AD34-4F6926FE883C</key>
 		<dict>
+			<key>xpos</key>
+			<integer>300</integer>
 			<key>ypos</key>
 			<real>200</real>
 		</dict>
