--- a/alfredConfig/Alfred.alfredpreferences/workflows/user.workflow.55F0A6CA-8E71-4BE5-8D1B-09F5C4E67D31/info.plist
+++ b/alfredConfig/Alfred.alfredpreferences/workflows/user.workflow.55F0A6CA-8E71-4BE5-8D1B-09F5C4E67D31/info.plist
@@ -171,6 +171,19 @@
 		</array>
 		<key>26F0CFA4-2B06-4D43-B4DC-7B0C3FEA7A61</key>
 		<array/>
+		<key>2B35EA77-BE76-4FD7-B3E9-12C740537ADC</key>
+		<array>
+			<dict>
+				<key>destinationuid</key>
+				<string>6AE37558-3BE4-4925-9162-347121F7999B</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+		</array>
 		<key>375331AA-2991-4D76-84C4-A723606A05D0</key>
 		<array>
 			<dict>
@@ -326,6 +339,19 @@
 			<dict>
 				<key>destinationuid</key>
 				<string>AB241720-885D-47CD-A9E3-2B1F322F4973</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+		</array>
+		<key>6AE37558-3BE4-4925-9162-347121F7999B</key>
+		<array>
+			<dict>
+				<key>destinationuid</key>
+				<string>0318B2FD-E0E7-4323-B4DA-76A085EF4F88</string>
 				<key>modifiers</key>
 				<integer>0</integer>
 				<key>modifiersubtext</key>
@@ -888,6 +914,46 @@ fi</string>
 		<dict>
 			<key>config</key>
 			<dict>
+				<key>browser</key>
+				<string></string>
+				<key>spaces</key>
+				<string></string>
+				<key>url</key>
+				<string>https://lion.mws.sankuai.com/config/dync?appKey={query}&amp;env=prod&amp;key={var:lion_key}</string>
+				<key>utf8</key>
+				<true/>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.action.openurl</string>
+			<key>uid</key>
+			<string>6863186B-11A6-487A-B83B-11F53C50B21F</string>
+			<key>version</key>
+			<integer>1</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>argumenttype</key>
+				<integer>0</integer>
+				<key>keyword</key>
+				<string>lk</string>
+				<key>subtext</key>
+				<string></string>
+				<key>text</key>
+				<string>input lion key</string>
+				<key>withspace</key>
+				<true/>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.input.keyword</string>
+			<key>uid</key>
+			<string>2B35EA77-BE76-4FD7-B3E9-12C740537ADC</string>
+			<key>version</key>
+			<integer>1</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
 				<key>alfredfiltersresults</key>
 				<false/>
 				<key>alfredfiltersresultsmatchmode</key>
@@ -942,19 +1008,20 @@ fi</string>
 		<dict>
 			<key>config</key>
 			<dict>
-				<key>browser</key>
-				<string></string>
-				<key>spaces</key>
-				<string></string>
-				<key>url</key>
-				<string>https://lion.mws.sankuai.com/config/dync?appKey={query}&amp;env=prod</string>
-				<key>utf8</key>
-				<true/>
+				<key>argument</key>
+				<string>{query}</string>
+				<key>passthroughargument</key>
+				<false/>
+				<key>variables</key>
+				<dict>
+					<key>lion_key</key>
+					<string>{query}</string>
+				</dict>
 			</dict>
 			<key>type</key>
-			<string>alfred.workflow.action.openurl</string>
+			<string>alfred.workflow.utility.argument</string>
 			<key>uid</key>
-			<string>6863186B-11A6-487A-B83B-11F53C50B21F</string>
+			<string>6AE37558-3BE4-4925-9162-347121F7999B</string>
 			<key>version</key>
 			<integer>1</integer>
 		</dict>
@@ -966,7 +1033,7 @@ fi</string>
 				<key>spaces</key>
 				<string></string>
 				<key>url</key>
-				<string>http://mcc.mws-test.sankuai.com/config/dync?appKey={query}&amp;env=test</string>
+				<string>http://mcc.mws-test.sankuai.com/config/dync?appKey={query}&amp;env=test&amp;key={var:lion_key}</string>
 				<key>utf8</key>
 				<true/>
 			</dict>
@@ -1406,7 +1473,7 @@ fi</string>
 				<key>queuemode</key>
 				<integer>1</integer>
 				<key>runningsubtext</key>
-				<string></string>
+				<string>loading...please wait</string>
 				<key>script</key>
 				<string>if [ -f /usr/local/bin/python ]
 then
@@ -1538,7 +1605,7 @@ fi</string>
 				<key>queuemode</key>
 				<integer>1</integer>
 				<key>runningsubtext</key>
-				<string>please waiting</string>
+				<string>loading...please wait</string>
 				<key>script</key>
 				<string>if [ -f /usr/local/bin/python ]
 then
@@ -1783,7 +1850,7 @@ fi</string>
 				<key>queuemode</key>
 				<integer>1</integer>
 				<key>runningsubtext</key>
-				<string></string>
+				<string>loading...please wait</string>
 				<key>script</key>
 				<string>if [ -f /usr/local/bin/python ]
 then
@@ -1856,7 +1923,7 @@ fi</string>
 				<key>queuemode</key>
 				<integer>1</integer>
 				<key>runningsubtext</key>
-				<string></string>
+				<string>loading...please wait</string>
 				<key>script</key>
 				<string>if [ -f /usr/local/bin/python ]
 then
@@ -2285,7 +2352,7 @@ fi</string>
 				<key>queuemode</key>
 				<integer>1</integer>
 				<key>runningsubtext</key>
-				<string></string>
+				<string>loading...please wait</string>
 				<key>script</key>
 				<string>if [ -f /usr/local/bin/python ]
 then
@@ -2316,25 +2383,6 @@ fi</string>
 		<dict>
 			<key>config</key>
 			<dict>
-				<key>browser</key>
-				<string></string>
-				<key>spaces</key>
-				<string></string>
-				<key>url</key>
-				<string>https://rds.mws.sankuai.com/dba/cluster/{query}</string>
-				<key>utf8</key>
-				<true/>
-			</dict>
-			<key>type</key>
-			<string>alfred.workflow.action.openurl</string>
-			<key>uid</key>
-			<string>0273FFA5-B0C9-44AE-9FFF-F63411FB905E</string>
-			<key>version</key>
-			<integer>1</integer>
-		</dict>
-		<dict>
-			<key>config</key>
-			<dict>
 				<key>alfredfiltersresults</key>
 				<false/>
 				<key>alfredfiltersresultsmatchmode</key>
@@ -2358,7 +2406,7 @@ fi</string>
 				<key>queuemode</key>
 				<integer>1</integer>
 				<key>runningsubtext</key>
-				<string></string>
+				<string>loading...please wait</string>
 				<key>script</key>
 				<string>if [ -f /usr/local/bin/python ]
 then
@@ -2385,6 +2433,25 @@ fi</string>
 			<string>98E3CB29-6224-4748-A5C4-BCFD1EAA04D4</string>
 			<key>version</key>
 			<integer>3</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>browser</key>
+				<string></string>
+				<key>spaces</key>
+				<string></string>
+				<key>url</key>
+				<string>https://rds.mws.sankuai.com/dba/cluster/{query}</string>
+				<key>utf8</key>
+				<true/>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.action.openurl</string>
+			<key>uid</key>
+			<string>0273FFA5-B0C9-44AE-9FFF-F63411FB905E</string>
+			<key>version</key>
+			<integer>1</integer>
 		</dict>
 		<dict>
 			<key>config</key>
@@ -2522,7 +2589,7 @@ fi</string>
 				<key>queuemode</key>
 				<integer>1</integer>
 				<key>runningsubtext</key>
-				<string></string>
+				<string>loading...please wait</string>
 				<key>script</key>
 				<string>if [ -f /usr/local/bin/python ]
 then
@@ -2576,7 +2643,7 @@ fi</string>
 				<key>queuemode</key>
 				<integer>1</integer>
 				<key>runningsubtext</key>
-				<string></string>
+				<string>loading...please wait</string>
 				<key>script</key>
 				<string>if [ -f /usr/local/bin/python ]
 then
@@ -2741,7 +2808,7 @@ fi</string>
 				<key>queuemode</key>
 				<integer>1</integer>
 				<key>runningsubtext</key>
-				<string></string>
+				<string>loading...please wait</string>
 				<key>script</key>
 				<string>if [ -f /usr/local/bin/python ]
 then
@@ -2956,7 +3023,7 @@ fi</string>
 				<key>queuemode</key>
 				<integer>1</integer>
 				<key>runningsubtext</key>
-				<string></string>
+				<string>loading...please wait</string>
 				<key>script</key>
 				<string>if [ -f /usr/local/bin/python ]
 then
@@ -3029,7 +3096,7 @@ fi</string>
 				<key>queuemode</key>
 				<integer>1</integer>
 				<key>runningsubtext</key>
-				<string></string>
+				<string>loading...please wait</string>
 				<key>script</key>
 				<string>if [ -f /usr/local/bin/python ]
 then
@@ -3168,7 +3235,7 @@ fi</string>
 				<key>queuemode</key>
 				<integer>1</integer>
 				<key>runningsubtext</key>
-				<string></string>
+				<string>please wait</string>
 				<key>script</key>
 				<string>if [ -f /usr/local/bin/python ]
 then
@@ -3260,7 +3327,7 @@ fi</string>
 				<key>queuemode</key>
 				<integer>1</integer>
 				<key>runningsubtext</key>
-				<string></string>
+				<string>please wait</string>
 				<key>script</key>
 				<string>if [ -f /usr/local/bin/python ]
 then
@@ -3655,9 +3722,9 @@ edplan - 我的上线列表
 		<key>0318B2FD-E0E7-4323-B4DA-76A085EF4F88</key>
 		<dict>
 			<key>xpos</key>
-			<integer>135</integer>
+			<integer>305</integer>
 			<key>ypos</key>
-			<integer>275</integer>
+			<integer>300</integer>
 		</dict>
 		<key>083EB27E-5B36-40DF-A30A-CEC5B02EE089</key>
 		<dict>
@@ -3763,6 +3830,13 @@ edplan - 我的上线列表
 			<integer>625</integer>
 			<key>ypos</key>
 			<integer>4790</integer>
+		</dict>
+		<key>2B35EA77-BE76-4FD7-B3E9-12C740537ADC</key>
+		<dict>
+			<key>xpos</key>
+			<integer>20</integer>
+			<key>ypos</key>
+			<integer>285</integer>
 		</dict>
 		<key>35E0DA2E-D322-49C6-A555-0680C7259194</key>
 		<dict>
@@ -3886,9 +3960,16 @@ edplan - 我的上线列表
 		<key>6863186B-11A6-487A-B83B-11F53C50B21F</key>
 		<dict>
 			<key>xpos</key>
-			<integer>540</integer>
+			<integer>545</integer>
 			<key>ypos</key>
-			<integer>345</integer>
+			<integer>280</integer>
+		</dict>
+		<key>6AE37558-3BE4-4925-9162-347121F7999B</key>
+		<dict>
+			<key>xpos</key>
+			<integer>205</integer>
+			<key>ypos</key>
+			<integer>330</integer>
 		</dict>
 		<key>74A4E7E9-8026-44E2-A717-D7A7BE32DF39</key>
 		<dict>
@@ -3937,7 +4018,7 @@ edplan - 我的上线列表
 			<key>xpos</key>
 			<integer>545</integer>
 			<key>ypos</key>
-			<integer>120</integer>
+			<integer>85</integer>
 		</dict>
 		<key>8D0C5D78-C1EB-4310-867B-C6840CBCC497</key>
 		<dict>
@@ -3958,14 +4039,14 @@ edplan - 我的上线列表
 			<key>xpos</key>
 			<integer>545</integer>
 			<key>ypos</key>
-			<integer>230</integer>
+			<integer>165</integer>
 		</dict>
 		<key>98E3CB29-6224-4748-A5C4-BCFD1EAA04D4</key>
 		<dict>
 			<key>xpos</key>
-			<integer>145</integer>
+			<integer>135</integer>
 			<key>ypos</key>
-			<integer>3335</integer>
+			<integer>3245</integer>
 		</dict>
 		<key>9927142E-17FC-4C82-8C6A-815EA178B0AD</key>
 		<dict>
@@ -4271,6 +4352,8 @@ edplan - 我的上线列表
 		<key>mis</key>
 		<string>diwenchen</string>
 	</dict>
+	<key>variablesdontexport</key>
+	<array/>
 	<key>version</key>
 	<string>1.3</string>
 	<key>webaddress</key>
