--- a/alfredConfig/Alfred.alfredpreferences/workflows/user.workflow.87FA6C4C-C741-4619-A250-3925B7D9FC55/info.plist
+++ b/alfredConfig/Alfred.alfredpreferences/workflows/user.workflow.87FA6C4C-C741-4619-A250-3925B7D9FC55/info.plist
@@ -8,6 +8,31 @@
 	<string>Tools</string>
 	<key>connections</key>
 	<dict>
+		<key>2F8E2D2E-A835-44F7-A104-8574259AD95A</key>
+		<array>
+			<dict>
+				<key>destinationuid</key>
+				<string>F22EE2A3-B95D-4C3B-A0B6-2CFCC8E36864</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+				<key>sourceoutputuid</key>
+				<string>AF4180F4-031D-474E-932E-BE61EA6D0188</string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+			<dict>
+				<key>destinationuid</key>
+				<string>B2981760-991A-4A48-882C-96452E5FB78E</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+		</array>
 		<key>3AD72B73-42DE-429D-9724-E1CCC60F45E0</key>
 		<array>
 			<dict>
@@ -34,11 +59,11 @@
 				<false/>
 			</dict>
 		</array>
-		<key>A36944B0-0F2E-47FF-A7F4-7CDDF4144CB1</key>
+		<key>88E9CD14-4106-4DCB-B629-E8068CAAAF4C</key>
 		<array>
 			<dict>
 				<key>destinationuid</key>
-				<string>F22EE2A3-B95D-4C3B-A0B6-2CFCC8E36864</string>
+				<string>64306AF0-E15C-4755-96EA-83B921BF873A</string>
 				<key>modifiers</key>
 				<integer>0</integer>
 				<key>modifiersubtext</key>
@@ -64,30 +89,7 @@
 		<array>
 			<dict>
 				<key>destinationuid</key>
-				<string>A36944B0-0F2E-47FF-A7F4-7CDDF4144CB1</string>
-				<key>modifiers</key>
-				<integer>0</integer>
-				<key>modifiersubtext</key>
-				<string></string>
-				<key>vitoclose</key>
-				<false/>
-			</dict>
-			<dict>
-				<key>destinationuid</key>
-				<string>D5E1B63C-D90D-4856-8FD7-79D43F5C2332</string>
-				<key>modifiers</key>
-				<integer>0</integer>
-				<key>modifiersubtext</key>
-				<string></string>
-				<key>vitoclose</key>
-				<false/>
-			</dict>
-		</array>
-		<key>D5E1B63C-D90D-4856-8FD7-79D43F5C2332</key>
-		<array>
-			<dict>
-				<key>destinationuid</key>
-				<string>B2981760-991A-4A48-882C-96452E5FB78E</string>
+				<string>2F8E2D2E-A835-44F7-A104-8574259AD95A</string>
 				<key>modifiers</key>
 				<integer>0</integer>
 				<key>modifiersubtext</key>
@@ -183,25 +185,6 @@ end alfred_script</string>
 		<dict>
 			<key>config</key>
 			<dict>
-				<key>inputstring</key>
-				<string></string>
-				<key>matchcasesensitive</key>
-				<true/>
-				<key>matchmode</key>
-				<integer>2</integer>
-				<key>matchstring</key>
-				<string>(?&lt;=/)(\d+)|\d+[\d\s]*</string>
-			</dict>
-			<key>type</key>
-			<string>alfred.workflow.utility.filter</string>
-			<key>uid</key>
-			<string>A36944B0-0F2E-47FF-A7F4-7CDDF4144CB1</string>
-			<key>version</key>
-			<integer>1</integer>
-		</dict>
-		<dict>
-			<key>config</key>
-			<dict>
 				<key>argumenttype</key>
 				<integer>1</integer>
 				<key>keyword</key>
@@ -217,6 +200,38 @@ end alfred_script</string>
 			<string>alfred.workflow.input.keyword</string>
 			<key>uid</key>
 			<string>D41F4980-3730-45E5-9990-048D52F6707D</string>
+			<key>version</key>
+			<integer>1</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>conditions</key>
+				<array>
+					<dict>
+						<key>inputstring</key>
+						<string></string>
+						<key>matchcasesensitive</key>
+						<false/>
+						<key>matchmode</key>
+						<integer>4</integer>
+						<key>matchstring</key>
+						<string>(?&lt;=/)(\d+)|\d+[\d\s]*</string>
+						<key>outputlabel</key>
+						<string>{query}</string>
+						<key>uid</key>
+						<string>AF4180F4-031D-474E-932E-BE61EA6D0188</string>
+					</dict>
+				</array>
+				<key>elselabel</key>
+				<string></string>
+				<key>hideelse</key>
+				<false/>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.utility.conditional</string>
+			<key>uid</key>
+			<string>2F8E2D2E-A835-44F7-A104-8574259AD95A</string>
 			<key>version</key>
 			<integer>1</integer>
 		</dict>
@@ -244,25 +259,6 @@ echo ${query}</string>
 			<string>B2981760-991A-4A48-882C-96452E5FB78E</string>
 			<key>version</key>
 			<integer>2</integer>
-		</dict>
-		<dict>
-			<key>config</key>
-			<dict>
-				<key>inputstring</key>
-				<string></string>
-				<key>matchcasesensitive</key>
-				<true/>
-				<key>matchmode</key>
-				<integer>0</integer>
-				<key>matchstring</key>
-				<string></string>
-			</dict>
-			<key>type</key>
-			<string>alfred.workflow.utility.filter</string>
-			<key>uid</key>
-			<string>D5E1B63C-D90D-4856-8FD7-79D43F5C2332</string>
-			<key>version</key>
-			<integer>1</integer>
 		</dict>
 		<dict>
 			<key>config</key>
@@ -339,82 +335,135 @@ echo ${query}</string>
 			<key>version</key>
 			<integer>2</integer>
 		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>argumenttype</key>
+				<integer>0</integer>
+				<key>keyword</key>
+				<string>maven</string>
+				<key>subtext</key>
+				<string></string>
+				<key>text</key>
+				<string>open maven repository</string>
+				<key>withspace</key>
+				<true/>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.input.keyword</string>
+			<key>uid</key>
+			<string>88E9CD14-4106-4DCB-B629-E8068CAAAF4C</string>
+			<key>version</key>
+			<integer>1</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>browser</key>
+				<string></string>
+				<key>skipqueryencode</key>
+				<false/>
+				<key>skipvarencode</key>
+				<false/>
+				<key>spaces</key>
+				<string></string>
+				<key>url</key>
+				<string>http://maven.sankuai.com/v1?page=0&amp;q={query}</string>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.action.openurl</string>
+			<key>uid</key>
+			<string>64306AF0-E15C-4755-96EA-83B921BF873A</string>
+			<key>version</key>
+			<integer>1</integer>
+		</dict>
 	</array>
 	<key>readme</key>
 	<string></string>
 	<key>uidata</key>
 	<dict>
+		<key>2F8E2D2E-A835-44F7-A104-8574259AD95A</key>
+		<dict>
+			<key>xpos</key>
+			<real>240</real>
+			<key>ypos</key>
+			<real>175</real>
+		</dict>
 		<key>3AD72B73-42DE-429D-9724-E1CCC60F45E0</key>
 		<dict>
 			<key>xpos</key>
-			<integer>60</integer>
+			<real>60</real>
 			<key>ypos</key>
-			<integer>30</integer>
+			<real>30</real>
 		</dict>
 		<key>5B8E8CA8-E7BB-497C-AE27-36995FA5EF8D</key>
 		<dict>
 			<key>xpos</key>
-			<integer>70</integer>
+			<real>55</real>
 			<key>ypos</key>
-			<integer>645</integer>
+			<real>465</real>
+		</dict>
+		<key>64306AF0-E15C-4755-96EA-83B921BF873A</key>
+		<dict>
+			<key>xpos</key>
+			<real>500</real>
+			<key>ypos</key>
+			<real>600</real>
 		</dict>
 		<key>70F8A31B-D16A-48BE-AC7D-70E51C3A25BC</key>
 		<dict>
 			<key>xpos</key>
-			<integer>525</integer>
+			<real>525</real>
 			<key>ypos</key>
-			<integer>30</integer>
+			<real>30</real>
 		</dict>
-		<key>A36944B0-0F2E-47FF-A7F4-7CDDF4144CB1</key>
+		<key>88E9CD14-4106-4DCB-B629-E8068CAAAF4C</key>
 		<dict>
+			<key>note</key>
+			<string>Type your keyword into Alfred to trigger this workflow.</string>
 			<key>xpos</key>
-			<integer>245</integer>
+			<real>55</real>
 			<key>ypos</key>
-			<integer>240</integer>
+			<real>600</real>
 		</dict>
 		<key>B2981760-991A-4A48-882C-96452E5FB78E</key>
 		<dict>
 			<key>xpos</key>
-			<integer>330</integer>
+			<real>350</real>
 			<key>ypos</key>
-			<integer>410</integer>
+			<real>260</real>
 		</dict>
 		<key>BD520F42-2F0A-44DB-98CA-DE501EE24A32</key>
 		<dict>
 			<key>xpos</key>
-			<integer>530</integer>
+			<real>515</real>
 			<key>ypos</key>
-			<integer>530</integer>
+			<real>350</real>
 		</dict>
 		<key>D41F4980-3730-45E5-9990-048D52F6707D</key>
 		<dict>
 			<key>xpos</key>
-			<integer>65</integer>
+			<real>55</real>
 			<key>ypos</key>
-			<integer>295</integer>
-		</dict>
-		<key>D5E1B63C-D90D-4856-8FD7-79D43F5C2332</key>
-		<dict>
-			<key>xpos</key>
-			<integer>245</integer>
-			<key>ypos</key>
-			<integer>440</integer>
+			<real>155</real>
 		</dict>
 		<key>E3F234C7-B914-49BC-9643-47917EA380A0</key>
 		<dict>
 			<key>xpos</key>
-			<integer>70</integer>
+			<real>55</real>
 			<key>ypos</key>
-			<integer>530</integer>
+			<real>350</real>
 		</dict>
 		<key>F22EE2A3-B95D-4C3B-A0B6-2CFCC8E36864</key>
 		<dict>
 			<key>xpos</key>
-			<integer>525</integer>
+			<real>525</real>
 			<key>ypos</key>
-			<integer>210</integer>
+			<real>145</real>
 		</dict>
 	</dict>
+	<key>userconfigurationconfig</key>
+	<array/>
 	<key>webaddress</key>
 	<string></string>
 </dict>
